<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:background="@color/white"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iavatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />
        <ImageView
            android:id="@+id/ivf"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="-6dp"
            android:contentDescription="@string/save_favorite"
            android:src="@drawable/baseline_favorite_border_24"
            android:tag="@string/not_saved"
            app:layout_constraintBottom_toBottomOf="@+id/iavatar"
            app:layout_constraintEnd_toEndOf="@+id/iavatar"/>

        <TextView
            android:id="@+id/tvnm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/iavatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="#09FF00"
            tools:text="@string/tv_name"/>

        <TextView
            android:id="@+id/tvu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvnm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            tools:text="@string/tv_username"/>

        <TextView
            android:id="@+id/tvres"
            style="@style/Font"
            app:layout_constraintTop_toBottomOf="@+id/tvu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/repository"
            android:gravity="center"
            app:drawableTopCompat="@drawable/baseline_bookmarks_24" />

        <TextView
            android:id="@+id/tvcom"
            style="@style/Font"
            app:layout_constraintTop_toBottomOf="@+id/tvres"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvloc"
            tools:text="@string/tv_company"
            android:gravity="center"
            app:drawableTopCompat="@drawable/baseline_business_center_24" />

        <TextView
            android:id="@+id/tvloc"
            style="@style/Font"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvcom"
            app:layout_constraintTop_toBottomOf="@+id/tvres"
            tools:text="Location"
            app:drawableTopCompat="@drawable/baseline_location_on_24" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvcom"
            app:tabTextColor="@color/purple_200" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressTint="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tabs"
            app:layout_constraintVertical_bias="0.0"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>